--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="Tutorial de HTML5 e CSS3 criando um site moderno e responsivo">
    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
    <link rel="stylesheet" href="style.css">
-    <title>html5 e CSS3</title>
+    <title>Professor Rmos - Hardware e PC Gamer</title>
+    <meta name = "description"  comntemt="">
 </head>
 <body>
-    <h1>HTML5 e CSS3</h1>
+    <!-- Cabeçalho -->
+    <header>
+        <!--Logotipo -->
+        <div>
+            <img src="img/logo.png" alt="logotipo diretoria">
+        </div>
+        <!-- Menu--> 
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" >&#x268;</label>
+            <ul>
+                <li><a href="http://">Inicio</a></li>
+                <li><a href="http://">Sobre</a></li>
+                <li><a href="http://">Conteúdo</a></li>
+                <li><a href="http://">Contato</a></li>
+            </ul>           
+        </nav>
+
+    <h1> HTML5 e CSS3 </h1>
 </body>
 </html>
