--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="Tutorial de HTML5 e CSS3 criando um site moderno e responsivo">
-   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-   <link rel="stylesheet" href="style.css">
-    <title>Professor Rmos - Hardware e PC Gamer</title>
-    <meta name = "description"  comntemt="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title> Diretoria Do Som </title>
+    <meta name="description" comntemt="">
 </head>
+
 <body>
     <!-- Cabeçalho -->
-    <header>
+    <header class="container"> 
         <!--Logotipo -->
-        <div>
+        <div id="logo">
             <img src="img/logo.png" alt="logotipo diretoria">
         </div>
-        <!-- Menu--> 
+        <!-- Menu-->
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" >&#x268;</label>
+            <label for="check">&#x268;</label>
             <ul>
                 <li><a href="http://">Inicio</a></li>
                 <li><a href="http://">Sobre</a></li>
                 <li><a href="http://">Conteúdo</a></li>
                 <li><a href="http://">Contato</a></li>
-            </ul>           
+            </ul>
         </nav>
 
-    <h1> HTML5 e CSS3 </h1>
+        <h1> HTML5 e CSS3 </h1>
 </body>
+
 </html>
