--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <header class="container"> 
         <!--Logotipo -->
         <div id="logo">
-            <img src="img/logo.png" alt="logotipo diretoria">
+            <img src="img/logo.jpg" alt="logotipo diretoria">
         </div>
         <!-- Menu-->
         <nav>
             <input type="checkbox" id="check">
-            <label for="check">&#x268;</label>
+            <label for="check">&#x268c;</label>
             <ul>
                 <li><a href="http://">Inicio</a></li>
                 <li><a href="http://">Sobre</a></li>
