adiçao e centralização do banner

--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
                 <li><a href="http://">Contato</a></li>
             </ul>
         </nav>
+    </header>
 
-        <h1> HTML5 e CSS3 </h1>
+    <!--main-->
+    <main>
+        <h1> Diretoria Do Som </h1>
+        <h2> Sonorização em eventos</h2> 
+        <a href="#" class="botao"> Saiba +</a>
+        </main>
 </body>
 
 </html>
