--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
             </ul>
         </nav>
     </header>
-
-    <!--main-->
+ <!--main-->
     <main>
-        <h1> Diretoria Do Som </h1>
-        <h2> Sonorização em eventos</h2> 
-        <a href="#" class="botao"> Saiba +</a>
+        <video autoplay mute loop src="img/2222.mp4">
+        </video>      
+        <div class = "destaque">
+            <h1> Diretoria Do Som </h1>
+            <h2> Sonorização em eventos</h2> 
+           <!-- <a href="#" class="botao"> Saiba +</a> -->
+        </div>
+        <!--a ref="htttp://www.youtube"-->
+        /* video background */
+        
+        
+    </div>
         </main>
 </body>
 
