--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Diretoria Do Som - Sonorização em eventos</title>
+    <meta name="description" content="">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title> Diretoria Do Som </title>
-    <meta name="description" comntemt="">
+    <div class="container"></div>
 </head>
 
 <body>
     <!-- Cabeçalho -->
-    <header class="container"> 
+    <header>
         <!--Logotipo -->
         <div id="logo">
-            <img src="img/logo.jpg" alt="logotipo diretoria">
+            <img src="img/baner3.jpg" alt="logotipo diretoria">
         </div>
         <!-- Menu-->
         <nav>
             <input type="checkbox" id="check">
             <label for="check">&#x268c;</label>
             <ul>
-                <li><a href="http://">Inicio</a></li>
-                <li><a href="http://">Sobre</a></li>
-                <li><a href="http://">Conteúdo</a></li>
-                <li><a href="http://">Contato</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#://">Sobre</a></li>
+                <li><a href="#://">Conteúdo</a></li>
+                <li><a href="#://">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -34,9 +34,46 @@
     <!--main-->
     <main>
         <h1> Diretoria Do Som </h1>
-        <h2> Sonorização em eventos</h2> 
-        <a href="#" class="botao"> Saiba +</a>
-        </main>
+        <h2> Sonorização em eventos</h2>
+        <!--a href="site do youtube" class="botao"> Saiba +</a-->
+    </main>
+    <!-- Seção de destaque -->
+    <section id="destaque">
+        <div class="container">
+            <!-- Imagem de destaque -->
+            <div id="foneicon.png">
+                <img src="img/xdj/xdjxz.jpeg" alt="Diretoria Do Som">
+            </div>
+
+            <!-- Texto de destaque -->
+            <div id="textoDestaque">
+                <h2>Locação de equipamentos!!!</h2>
+                <p>Pensando em Sonorização? Chama a diretoria. Equipamentos profissionais para seu evento. Faça a cotação conosco.</p>
+                <div class="topicos">
+                    <img src="img/foneicone.png" alt="Caixas Qsck12">
+                    <p>Caixas Qsck12</p>
+                </div>
+                <div class="topicos">
+                    <img src="img/icondj.png" alt="Aprenda com os links">
+                    <p>Review</p>
+                </div>
+                <div class="topicos">1
+                    <img src="img/mixericon.png" alt="Mixagem com Reckordbox">
+                    <p>Como passar suas musicas em reckordbox</p>
+                </div>
+            </div>
+        </div>
+    </section id="sobre">
+        <div id="institucional">
+            <h2>Site para locação de equipamentos</h2>]
+            <p> Carro chefe Controladora XDJ-XZ, Caixas ativas QSCK12...</p>     
+       </div>
+       <div id="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/72HTrLLAFP4?si=L6z-ZHJQ200NdAqa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+    </div> 
+   
+</section>
 </body>
 
 </html>
